--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<div id="root"></div>
 		<script src="main.js"></script>
+		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	</body>
 </html>
