--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Pomodoro Clock</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="root"></div>
