change index.html to main page for webpage with all the react projects

--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pomodoro Clock</title>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet">
+		<title>FE Libraries Projects</title>
+		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<div id="root"></div>
-		<script src="main.js"></script>
-		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+		<main>
+			<h1 class="main-page-title">
+				freeCodeCamp Front End Libraries Certification
+			</h1>
+			<p>To earn this certification from freeCodeCamp, I completed five React JS projects.  Click a project name below to view the final project live.</p>
+
+			<h2>The 5 challenges included:</h2>
+			<ul style="list-style-type:circle;">
+				<li>
+					<a href="https://quote-machine-app.herokuapp.com/" class="main-nav" id="quoteMachine">Quote Machine</a>
+				</li>
+				<li>
+					<a href="https://markdown-preview-app.herokuapp.com/" class="main-nav" id="markdown">MarkDown Previewer</a>
+				</li>
+				<li>
+					<a href="https://sound-machine-app.herokuapp.com/" class="main-nav" id="drumMachine" >Drum Machine</a>
+				</li>
+				<li>
+					<a href="https://calculatoreact.herokuapp.com/" class="main-nav" id="calculator">Calculator</a>
+				</li>
+				<li>
+					<a href="src/pomodoro.html" class="main-nav" id="pomodoro" >Pomodoro Timer</a>
+				</li>
+			</ul>
+		</main>
 	</body>
 </html>
